# wheely

./: .gitignore  README.md
catkin_workspaces/thunderborg/: CMakeLists.txt  package.xml  setup.py
catkin_workspaces/thunderborg/launch/: brandenbot_rs.launch
catkin_workspaces/thunderborg/nodes/: thunderborg_node  thunderborg_teleop.cpp
catkin_workspaces/thunderborg/src/thunderborg/: ThunderBorg.py
launch/: brandenbot_navigation.launch  imu_filter.launch  localization.launch  move_base.launch  rtabmap_brandenbot.launch  rtabmap_simplified.launch  rtabmap_simplified2.launch  tracking.launch
others/: frames.gv
params/: base_local_planner_params.yaml  costmap_common_params_brandenbot.yaml  dwa_local_planner_params_brandenbot.yaml  move_base_params.yaml
rviz/: rviz_brandenbot.rviz  rviz_v1.rviz
